@@ -1,0 +1,5 @@
+<html>
+	The documentation for debian-installer is as of yet incomplete.
+	For now, there is only the
+	<a href="INSTALLATION-HOWTO">INSTALLATION HOWTO</a>
+</html>
